<resources>
    <string name="app_name">ModulosTalleres</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="edit_message">Enter a message</string>
    <string name="ver_talleres">Ver talleres</string>
    <string name="mis_solicitudes">Mis solicitudes</string>
    <string name="creado_por_grupo_1">Creado por Grupo 1</string>
    <string name="logo">TODO</string>
    <string name="modulo_talleres">Modulo Talleres</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="volver_al_inicio">Volver al inicio</string>
</resources>